# lambdacms

./: .dir-locals.el  .gitignore  .travis.yml  Application.hs.patch  CHANGES.md  Foundation.hs.patch  LICENSE  ManualPatching.md  Model.hs.patch  README.md  Roles.hs.patch  Settings.hs.patch  TODO.md  all_patches_combined.patch  cabalfile.patch  config_models.patch  config_routes.patch  config_settings.patch  config_settings.yml.patch  create  create_patches.sh  extension.cabal  init.sh  lambdacms-core.cabal  lambdacms-media.cabal  lambdacms.patch  lambdacms_init.sh  project_name.cabal.patch  roles.patch  sending-emails.md  stack.yaml
LambdaCms/: Core.hs  I18n.hs  Media.hs
LambdaCms/Core/: AuthHelper.hs  Classes.hs  Foundation.hs  Import.hs  Message.hs  Models.hs  Routes.hs  Settings.hs
LambdaCms/Core/Handler/: ActionLog.hs  Home.hs  Static.hs  User.hs
LambdaCms/I18n/: Dutch.hs  Italian.hs
LambdaCms/Media/: Foundation.hs  Import.hs  Message.hs  Models.hs  Routes.hs
LambdaCms/Media/Handler/: Home.hs  Media.hs  MediaFile.hs
PACKAGE/: MODEL.hs
PACKAGE/MODEL/: Foundation.hs  Message.hs
PACKAGE/MODEL/Handler/: MODEL.hs
config/: models  routes
docs/: implement-mail-delivery-method.md  role-based-authorization.md
lambdacms-core/: CHANGES.md  README.md  lambdacms-core.cabal
lambdacms-core/LambdaCms/: Core.hs  I18n.hs
lambdacms-core/LambdaCms/Core/: Classes.hs  Foundation.hs  Message.hs  Models.hs  Settings.hs
lambdacms-core/LambdaCms/Core/Handler/: ActionLog.hs  Home.hs  Static.hs  User.hs
lambdacms-core/LambdaCms/I18n/: Default.hs  Dutch.hs  Italian.hs  Russian.hs
lambdacms-core/config/: models  routes
lambdacms-core/static/css/: bootstrap.min.css
lambdacms-core/static/js/: bootstrap.min.js
lambdacms-core/templates/: action-log.hamlet  admin-auth-layout.cassius  admin-auth-layout.hamlet  admin-layout.cassius  admin-layout.coffee  admin-layout.hamlet  admin-layout.julius  admin-welcome.hamlet  adminhome.coffee  adminhome.hamlet  adminhome.julius  pagehead.hamlet
lambdacms-core/templates/mail/: activation-html.hamlet  activation-text.hamlet  reset-html.hamlet  reset-text.hamlet
lambdacms-core/templates/user/: account-already-activated.hamlet  edit.hamlet  index.hamlet  new.hamlet  tokenmismatch.hamlet
lambdacms-core/test/: FoundationSpec.hs  TestImport.hs
lambdacms-media/: README.md  lambdacms-media.cabal
lambdacms-media/LambdaCms/: Media.hs
lambdacms-media/LambdaCms/Media/: Foundation.hs  Import.hs  Message.hs  Models.hs
lambdacms-media/LambdaCms/Media/Handler/: Media.hs
lambdacms-media/config/: models  routes
lambdacms-media/templates/: edit.hamlet  index.hamlet  index_item.hamlet  new.hamlet
messages/: en.msg  nl.msg
scaffold-extension/: EXTENSION_README.md  README.md  create_extension_scaffold.sh  extension.cabal
scaffold-extension/PACKAGE/: MODEL.hs
scaffold-extension/PACKAGE/MODEL/: Foundation.hs  Import.hs  Message.hs  Models.hs
scaffold-extension/PACKAGE/MODEL/Handler/: MODEL.hs
scaffold-extension/config/: routes
scaffold-extension/templates/: edit.hamlet  index.hamlet  new.hamlet
templates/: action-log.hamlet  admin-auth-layout-wrapper.hamlet  admin-auth-layout.hamlet  admin-layout.cassius  admin-layout.coffee  admin-layout.hamlet  admin-layout.julius  admin-layout.lucius  admin-welcome.hamlet  adminauthlayout.hamlet  adminauthlayout.lucius  adminhome.coffee  adminhome.hamlet  adminlayout-wrapper.hamlet  adminlayout.hamlet  adminlayout.lucius  adminmenu.hamlet  edit.hamlet  index.cassius  index.hamlet  lambdacmsadminlayout.hamlet  lambdacorelayout.hamlet  media.lucius  new.hamlet  overview.hamlet  tryoutlayout-wrapper.hamlet
templates/mail/: activation-html.hamlet  activation-text.hamlet
templates/user/: activate.hamlet  edit.cassius  edit.hamlet  index.hamlet  new.hamlet  settings-form.hamlet  show.hamlet
yesod-scaffold-patches/: Application.hs.patch  Foundation.hs.patch  Handler_Home.hs.patch  LICENSE  Model.hs.patch  README.md  Roles.hs.patch  Settings.hs.patch  config_models.patch  config_routes.patch  config_settings.yml.patch  create_patches.sh  project_name.cabal.patch  stack.yaml.patch  templates_homepage.hamlet.patch  templates_homepage.julius.patch  templates_homepage.lucius.patch  test_Handler_HomeSpec.hs.patch  test_TestImport.hs.patch
