name:               lambdacms-core
version:            0.0.7
license:            MIT
license-file:       LICENSE
author:             Cies Breijs
maintainer:         cies@AT-hoppinger.com
copyright:          (c) 2014 Hoppinger
bug-reports:        https://github.com/lambdacms/lambdacms-core
homepage:           http://lambdacms.org
synopsis:           LambdaCms
description:        Content Management System (CMS)
stability:          alpha
category:           web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-source-files: README.md
                  , templates/*
                  , messages/*
                  , static/*

source-repository head
  type:             git
  location:         git://github.com/lambdacms/lambdacms-core.git

library
  default-language: Haskell2010
  exposed-modules:  LambdaCms.Core
                  , LambdaCms.Core.Message
                  , LambdaCms.Core.Settings

  other-modules:    LambdaCms.Core.Foundation
                  , LambdaCms.Core.Models
                  , LambdaCms.Core.Classes
                  , LambdaCms.Core.Import
                  , LambdaCms.Core.Handler.Static
                  , LambdaCms.Core.Handler.Home
                  , LambdaCms.Core.Handler.User
                  , LambdaCms.I18n
                  , LambdaCms.I18n.Dutch

  build-depends:    base
                  , yesod
                  , yesod-auth
                  , yesod-form
                  , yesod-form-nl
                  , persistent
                  , text
                  , shakespeare
                  , uuid                               >= 1.3.3    && < 1.4
                  , time                               >= 1.4.2    && < 1.5
                  , friendly-time                      >= 0.3      && < 1.0
                  , old-locale                         >= 1.0.0.5  && < 1.0.1.0
                  , mime-mail                          >= 0.4.5.2  && < 0.5
                  , blaze-html
                  , bytestring                         >= 0.9        && < 0.11
                  , data-default
                  , containers                         >= 0.5.5.1  && < 0.6
                  , template-haskell
                  , gravatar
                  , file-embed

  ghc-options:      -Wall -O2
