name:               lambdacms-core
version:            0.0.7.3
license:            MIT
license-file:       LICENSE
author:             Cies Breijs, Mats Rietdijk, Rutger van Aalst
maintainer:         cies@AT-hoppinger.com
copyright:          (c) 2014 Hoppinger
bug-reports:        https://github.com/lambdacms/lambdacms-core
homepage:           http://lambdacms.org
synopsis:           Core CMS extension for Yesod apps
description:        LambdaCms is a Content Management System (CMS) in Haskell
                    using Yesod.
stability:          alpha
category:           Web
build-type:         Simple
tested-with:        GHC >= 7.6
cabal-version:      >= 1.18
extra-source-files: README.md
                  , CHANGES.md
                  , templates/*.hamlet
                  , templates/*.julius
                  , templates/*.cassius
                  , templates/mail/*.hamlet
                  , templates/user/*.hamlet
                  , static/css/*.css
                  , static/css/*.min.css
                  , static/fonts/*.eot
                  , static/fonts/*.svg
                  , static/fonts/*.ttf
                  , static/fonts/*.woff
                  , static/img/*.png
                  , static/js/*.min.js
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:         git://github.com/lambdacms/lambdacms-core.git

library
  default-language: Haskell2010
  exposed-modules:  LambdaCms.Core
                  , LambdaCms.Core.Message
                  , LambdaCms.Core.Settings

  other-modules:    LambdaCms.Core.Foundation
                  , LambdaCms.Core.Models
                  , LambdaCms.Core.Classes
                  , LambdaCms.Core.Import
                  , LambdaCms.Core.Handler.Static
                  , LambdaCms.Core.Handler.Home
                  , LambdaCms.Core.Handler.User
                  , LambdaCms.Core.Handler.ActionLog
                  , LambdaCms.I18n
                  , LambdaCms.I18n.Dutch

  build-depends:    base                               >= 4.3     && < 5
                  , yesod
                  , yesod-core
                  , yesod-auth
                  , yesod-form
                  , persistent
                  , text
                  , shakespeare
                  , uuid                               >= 1.3.3    && < 1.4
                  , time                               >= 1.4.2    && < 1.5
                  , friendly-time                      >= 0.3      && < 1.0
                  , old-locale                         >= 1.0.0.5  && < 1.0.1.0
                  , mime-mail                          >= 0.4.5.2  && < 0.5
                  , blaze-html
                  , bytestring                         >= 0.9        && < 0.11
                  , data-default
                  , containers                         >= 0.5.5.1  && < 0.6
                  , template-haskell
                  , gravatar
                  , file-embed
                  , lists
                  , wai
                  , esqueleto

  ghc-options:      -Wall
