name:               lambdacms-media
version:            0.2.0
license:            MIT
license-file:       LICENSE
author:             Mats Rietdijk, Cies Breijs
maintainer:         mats@AT-hoppinger.com
copyright:          (c) 2014-2015 Hoppinger BV
bug-reports:        https://github.com/lambdacms/lambdacms-media/issues
homepage:           http://lambdacms.org
synopsis:           LambdaCms "media" extension
description:        LambdaCms is a Content Management System (CMS) in Haskell
                    using Yesod. This package contains the "media" extension.
stability:          alpha
category:           Web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-source-files: README.md
                  , CHANGES.md
                  , templates/*.hamlet
                  , templates/*.cassius
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:         git://github.com/lambdacms/lambdacms-media.git

library
  default-language: Haskell2010

  exposed-modules:  LambdaCms.Media
                  , LambdaCms.Media.Message

  other-modules:    LambdaCms.Media.Foundation
                  , LambdaCms.Media.Models
                  , LambdaCms.Media.Import
                  , LambdaCms.Media.Handler.Media

  build-depends:    base                    >= 4.3      && < 5
                  , yesod
                  , yesod-form
                  , lambdacms-core          >= 0.0.7.3  && < 0.2
                  , persistent
                  , text
                  , time
                  , filepath
                  , directory
                  , shakespeare

  ghc-options:      -Wall
