name:               lambdacms-core
version:            0.3.0.2
license:            MIT
license-file:       LICENSE
author:             Cies Breijs, Mats Rietdijk, Rutger van Aalst
maintainer:         cies@AT-hoppinger.com
copyright:          (c) 2014-2015 Hoppinger
bug-reports:        https://github.com/lambdacms/lambdacms/issues
homepage:           http://lambdacms.org
synopsis:           LambdaCms 'core' subsite for Yesod apps
description:        LambdaCms is a Content Management System (CMS) in Haskell.
                    using Yesod.
stability:          alpha
category:           Web
build-type:         Simple
tested-with:        GHC >= 7.10
cabal-version:      >= 1.18
extra-doc-files:    README.md
                  , CHANGES.md
extra-source-files: templates/*.hamlet
                  , templates/*.julius
                  , templates/*.cassius
                  , templates/mail/*.hamlet
                  , templates/user/*.hamlet
                  , static/css/*.css
                  , static/css/*.min.css
                  , static/fonts/*.eot
                  , static/fonts/*.svg
                  , static/fonts/*.ttf
                  , static/fonts/*.woff
                  , static/img/*.png
                  , static/js/*.min.js
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:         git://github.com/lambdacms/lambdacms.git

library
  default-language: Haskell2010
  exposed-modules:  LambdaCms.Core
                  , LambdaCms.Core.Message
                  , LambdaCms.Core.Settings
                    -- for the test suite
                  , LambdaCms.Core.Foundation
  other-modules:    LambdaCms.Core.Models
                  , LambdaCms.Core.Classes
                  , LambdaCms.Core.Import
                  , LambdaCms.Core.Handler.ActionLog
                  , LambdaCms.Core.Handler.Home
                  , LambdaCms.Core.Handler.Static
                  , LambdaCms.Core.Handler.User
                  , LambdaCms.I18n
                  , LambdaCms.I18n.Dutch
                  , LambdaCms.I18n.Italian

  build-depends:    base                               >= 4.3     && < 5
                  , yesod
                  , yesod-core
                  , yesod-auth
                  , yesod-form
                  , persistent
                  , text
                  , shakespeare
                  , uuid                               >= 1.3.3    && < 1.4
                  , time                               >= 1.5      && < 1.6
                  , friendly-time                      >= 0.4      && < 0.5
                  , old-locale                         >= 1.0.0.5  && < 1.0.1.0
                  , mime-mail                          >= 0.4.5.2  && < 0.5
                  , blaze-html
                  , bytestring                         >= 0.9      && < 0.11
                  , data-default
                  , containers                         >= 0.5.5.1  && < 0.6
                  , template-haskell
                  , gravatar
                  , file-embed
                  , lists
                  , wai
                  , esqueleto

  ghc-options:      -Wall

test-suite test
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
    -- TODO: remove other-modules after stack can properly detect when to rebuild
    other-modules:     FoundationSpec
                     , Spec
                     , TestImport

    default-extensions:
                TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , yesod-core
                 , yesod
                 , hspec
                 , classy-prelude
                 , classy-prelude-yesod
                 , lambdacms-core
